--- a/_output.yml
+++ b/_output.yml
@@ -1,12 +1,15 @@
 bookdown::bs4_book:
-  css: style.css
+  css:
+    - "https://bootswatch.com/5/litera/bootstrap.min.css"
+    - style.css
   theme:
-    primary: "#096B72"
-  repo: https://github.com/rstudio/bookdown-demo
+    primary: "#111111"
+
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
   latex_engine: xelatex
   citation_package: natbib
   keep_tex: yes
+
 bookdown::epub_book: default
