--- a/_output.yml
+++ b/_output.yml
@@ -4,6 +4,10 @@ bookdown::bs4_book:
     - style.css
   theme:
     primary: "#111111"
+  config:
+    toc:
+      collapse: section
+    download: ["pdf", "epub"]
 
 bookdown::pdf_book:
   includes:
